--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,12 +2,12 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      python: 3.9  # Specify the Python version you want to use
     commands:
-      # Install Python and pip
-      - echo Installing Python and dependencies...
-      - yum install -y python3
-      - python3 -m pip install --upgrade pip
       # Install Robot Framework and required libraries
+      - echo Installing Robot Framework and dependencies...
+      - python3 -m pip install --upgrade pip
       - pip3 install robotframework robotframework-requests
 
   pre_build:
